File owner is now www-data:www-data; Update Nginx conf to parameterize the same value

--- a/salt/webserver/nginx/config/nginx.conf
+++ b/salt/webserver/nginx/config/nginx.conf
@@ -1,4 +1,6 @@
-user www-data;
+{% from 'webserver/nginx/map.jinja' import os_config with context %}
+
+user {{ os_config.file_owner }};
 worker_processes 4;
 pid /run/nginx.pid;
 
